--- a/Tema8/Tema08_ejercicio_alumno.html
+++ b/Tema8/Tema08_ejercicio_alumno.html
@@ -1,45 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Ejercicios – Tema 8 con Bootstrap 5</title>
-		<!-- Bootstrap 5 CSS -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-		<style>
-			.card + .card{margin-top:1rem}
-		</style>
-	</head>
-	<body class="bg-light">
-		<div class="container pgit 
-			<h1 class="mb-4">Ejercicios - Tema 8: Validación de formularios</h1>
-			<p class="text-muted">Se mantiene el patrón de validación con <code>addEventListener('submit', …)</code> y validación HTML5 donde corresponde.</p>
-			<!-- EJ1 -->
-			<div class="card">
-				<div class="card-header">Ejercicio 1 – JS básico</div>
-				<div class="card-body">
-					<form id="bs-form-ej1" class="row g-3" novalidate>
-						<div class="col-md-6">
-							<label for="usuario" class="form-label">Usuario</label>
-							<input class="form-control" type="text" name="usuario">
-						</div>
-						<div class="col-md-6">
-							<label for="clave" class="form-label">Contraseña</label>
-							<input class="form-control" type="password" name="clave">
-						</div>
-						<div class="col-12">
-							<button class="btn btn-primary" type="submit">Enviar</button>
-						</div>
-					</form>
-					<div id="bs-msg-ej1" class="mt-2"></div>
 
-				</div>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Ejercicios – Tema 8 con Bootstrap 5</title>
+	<!-- Bootstrap 5 CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<style>
+		.card+.card {
+			margin-top: 1rem
+		}
+	</style>
+</head>
+
+<body class="bg-light">
+	<div class="container pgit 
+			<h1 class=" mb-4">Ejercicios - Tema 8: Validación de formularios</h1>
+		<p class="text-muted">Se mantiene el patrón de validación con <code>addEventListener('submit', …)</code> y
+			validación HTML5 donde corresponde.</p>
+		<!-- EJ1 -->
+		<div class="card">
+			<div class="card-header">Ejercicio 1 – JS básico</div>
+			<div class="card-body">
+				<form id="bs-form-ej1" class="row g-3" novalidate>
+					<div class="col-md-6">
+						<label for="usuario" class="form-label">Usuario</label>
+						<input class="form-control" type="text" name="usuario">
+					</div>
+					<div class="col-md-6">
+						<label for="clave" class="form-label">Contraseña</label>
+						<input class="form-control" type="password" name="clave">
+					</div>
+					<div class="col-12">
+						<button class="btn btn-primary" type="submit">Enviar</button>
+					</div>
+				</form>
+				<div id="bs-msg-ej1" class="mt-2"></div>
+
 			</div>
+		</div>
 		<!-- Bootstrap 5 JS (bundle con Popper) -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+			crossorigin="anonymous"></script>
 		<script>
 			// TODO: Aquí va el código de validación 
-			document.getElementById('bs-form-ej1').addEventListener('submit', function(e) {
+			document.getElementById('bs-form-ej1').addEventListener('submit', function (e) {
 				e.preventDefault();
 				const usuario = this.usuario.value.trim();
 				const clave = this.clave.value.trim();
@@ -49,12 +57,285 @@
 					msgDiv.textContent = 'Por favor, complete todos los campos.';
 					msgDiv.className = 'alert alert-danger';
 					return;
-				
+
 				}
 				msgDiv.textContent = 'Formulario enviado correctamente.';
 				msgDiv.className = 'alert alert-success';
 			});
 		</script>
-		
-	</body>
+		<div class="container py-4">
+
+
+
+			<!-- Registro (Email, Edad, Contraseña) -->
+			<div class="card">
+				<div class="card-header">Ejercicio 2 – Registro</div>
+				<div class="card-body">
+					<!-- Sin "novalidate" para que el navegador valide solo -->
+					<form id="form-registro" class="row g-3">
+						<div class="col-md-6">
+							<label for="email" class="form-label">Email</label>
+							<input class="form-control" type="email" id="email" name="email" required
+								autocomplete="email" placeholder="tu@email.com">
+						</div>
+
+						<div class="col-md-3">
+							<label for="edad" class="form-label">Edad</label>
+							<input class="form-control" type="number" id="edad" name="edad" min="18" max="120" step="1"
+								inputmode="numeric" required placeholder="18">
+						</div>
+
+						<div class="col-md-6">
+							<label for="password" class="form-label">Contraseña</label>
+							<input class="form-control" type="password" id="password" name="password" minlength="6"
+								required placeholder="Mín. 6 caracteres" autocomplete="new-password">
+						</div>
+
+						<div class="col-12">
+							<button class="btn btn-primary" type="submit">Enviar</button>
+						</div>
+					</form>
+
+					<div id="msg-registro" class="mt-2" role="status" aria-live="polite"></div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Bootstrap 5 JS (bundle) -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+		<script>
+			// No se hace submit real: solo mostramos el mensaje si todo es válido.
+			document.getElementById('form-registro').addEventListener('submit', function (e) {
+				e.preventDefault();
+				const msg = document.getElementById('msg-registro');
+				msg.className = 'alert alert-success';
+				msg.textContent = 'Formulario enviado correctamente.';
+
+				// Si quisieras enviarlo de verdad, usar: form.submit();
+			}
+
+			);
+
+		</script>
+		<div class="container py-4">
+
+			<p class="text-muted">Validación con <code>pattern</code> para formatos específicos (sin librerías extra).
+			</p>
+
+			<!-- EJERCICIO 3 – Pattern -->
+			<div class="card">
+				<div class="card-header">Ejercicio 3 – Validación con patrón (Pattern)</div>
+				<div class="card-body">
+					<form id="form-pattern" class="row g-3">
+						<div class="col-md-8">
+							<label for="nombre" class="form-label">Nombre y apellidos</label>
+							<input type="text" class="form-control" id="nombre" name="nombre" required
+								autocomplete="name" placeholder="Ej.: María García Núñez"
+								pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ\- ]+$"
+								title="Solo letras (A–Z, a–z), letras acentuadas (ÁÉÍÓÚáéíóú, Ññ), espacios y guiones (-).">
+							<div class="form-text">
+								Permitidos: letras, acentos (ÁÉÍÓÚ, áéíóú, Ñ/ñ), espacios y guiones.
+							</div>
+						</div>
+
+						<div class="col-12">
+							<button class="btn btn-primary" type="submit">Enviar</button>
+						</div>
+					</form>
+
+					<div id="msg-pattern" class="mt-2" role="status" aria-live="polite"></div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Bootstrap 5 JS (bundle) -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+		<script>
+			// Sin envío real: mostramos mensaje si pasa la validación HTML5.
+			document.getElementById('form-pattern').addEventListener('submit', function (e) {
+				e.preventDefault();
+				const nombre = this.nombre.value.trim();
+				const msg = document.getElementById('msg-pattern');
+
+				msg.className = 'alert alert-success';
+				msg.textContent = 'Formulario enviado correctamente.';
+
+				if (nombre === '') {
+					msg.className = 'alert alert-danger';
+					msg.textContent = 'Por favor, complete el campo de nombre.';
+
+				}
+				return;
+			});
+		</script>
+		<div class="container py-4">
+
+			<p class="text-muted">Validación de coincidencia de contraseñas con JavaScript.</p>
+
+			<div class="card">
+				<div class="card-header">Ejercicio 4 – Confirmar contraseña</div>
+				<div class="card-body">
+					<form id="form-pass" class="row g-3">
+						<div class="col-md-6">
+							<label for="pass1" class="form-label">Contraseña</label>
+							<input class="form-control" type="password" id="pass1" name="pass1" minlength="6" required
+								autocomplete="new-password" placeholder="Mínimo 6 caracteres">
+						</div>
+
+						<div class="col-md-6">
+							<label for="pass2" class="form-label">Repetir contraseña</label>
+							<input class="form-control" type="password" id="pass2" name="pass2" minlength="6" required
+								autocomplete="new-password" placeholder="Repite la contraseña">
+						</div>
+
+						<div class="col-12">
+							<button class="btn btn-primary" type="submit">Registrar</button>
+						</div>
+					</form>
+
+					<div id="msg-pass" class="mt-2" role="status" aria-live="polite"></div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Bootstrap 5 JS (bundle) -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+		<script>
+			// Validación de coincidencia de contraseñas
+			document.getElementById('form-pass').addEventListener('submit', function (e) {
+				e.preventDefault();
+				const pass1 = this.pass1.value.trim();
+				const pass2 = this.pass2.value.trim();
+				const msg = document.getElementById('msg-pass');
+
+				if (pass1 !== pass2) {
+					msg.className = 'alert alert-danger';
+					msg.textContent = 'Las contraseñas no coinciden.';
+					return;
+				}
+				msg.className = 'alert alert-success';
+				msg.textContent = 'Formulario enviado correctamente.';
+			});
+
+
+
+
+		</script>
+		<div class="container py-4">
+
+
+			<div class="card">
+				<div class="card-header">Ejercicio 5 – Registro completo</div>
+				<div class="card-body">
+					<!-- Usamos novalidate para validar manualmente con JS -->
+					<form id="form-ej" class="row g-3">
+						<!-- Nombre y apellidos -->
+						<div class="col-md-8">
+							<label for="nombre" class="form-label">Nombre y apellidos</label>
+							<input type="text" class="form-control" id="nombre" name="nombre" required
+								autocomplete="name" placeholder="Ej.: María-José García Núñez"
+								pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ\- ]+$"
+								title="Solo letras (A–Z, a–z), letras acentuadas (ÁÉÍÓÚáéíóú, Ññ), espacios y guiones (-).">
+						</div>
+
+						<!-- Email -->
+						<div class="col-md-6">
+							<label for="email" class="form-label">Email</label>
+							<input class="form-control" type="email" id="email" name="email" required
+								autocomplete="email" placeholder="tu@email.com">
+						</div>
+
+						<!-- Edad -->
+						<div class="col-md-3">
+							<label for="edad" class="form-label">Edad</label>
+							<input class="form-control" type="number" id="edad" name="edad" min="16" max="120" step="1"
+								required placeholder="16">
+						</div>
+
+						<!-- Contraseña -->
+						<div class="col-md-6">
+							<label for="pass1" class="form-label">Contraseña</label>
+							<input class="form-control" type="password" id="pass1" name="pass1" minlength="6" required
+								autocomplete="new-password" placeholder="Mínimo 6 caracteres">
+						</div>
+
+						<!-- Repetir contraseña -->
+						<div class="col-md-6">
+							<label for="pass2" class="form-label">Repetir contraseña</label>
+							<input class="form-control" type="password" id="pass2" name="pass2" minlength="6" required
+								autocomplete="new-password" placeholder="Repite la contraseña">
+						</div>
+
+						<!-- Términos -->
+						<div class="col-12">
+							<div class="form-check">
+								<input class="form-check-input" type="checkbox" id="terminos" name="terminos" required>
+								<label class="form-check-label" for="terminos">Acepto los términos</label>
+							</div>
+						</div>
+
+						<!-- Botón -->
+						<div class="col-12">
+							<button class="btn btn-primary" type="submit">Enviar</button>
+						</div>
+					</form>
+
+					<div id="msg" class="mt-2" role="status" aria-live="polite"></div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Bootstrap 5 JS (bundle) -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+		<script>
+			document.getElementById('form-ej').addEventListener('submit', function (e) {
+				e.preventDefault();
+				const pass1 = this.pass1.value.trim();
+				const pass2 = this.pass2.value.trim()
+				const json = document.getElementById('json')
+				const msg = document.getElementById('msg');
+
+				// Validaciones
+				if (pass1 !== pass2) {
+					msg.className = 'alert alert-danger';
+					msg.textContent = 'Las contraseñas no coinciden.';
+					return;
+				}
+				if (!this.checkValidity()) {
+					// Deja que el navegador muestre los errores HTML5
+					this.reportValidity();
+					return;
+
+				}
+				const datos = {
+					nombre: this.nombre.value.trim(),
+					email: this.email.value.trim(),
+					edad: Number(this.edad.value),
+					acepta_terminos: this.terminos.checked
+				};
+
+				msg.className = 'alert alert-success';
+				msg.textContent = 'Formulario enviado correctamente.';
+				json.textContent = JSON.stringify(datos), null, 2;
+				if (nombre === '') {
+					msg.className = 'alert alert-danger';
+					msg.textContent = 'Por favor, complete el campo de nombre.';
+
+
+
+
+
+					return;
+				}
+				return;
+
+			});
+
+
+		</script>
+
+
+
+</body>
+
 </html>
